# FireGL

./: .gitignore  CMakeLists.txt  License.txt  README.md
Example/: Config.ini  CustomCamera.h  CustomInputManager.h  main.cpp
Example/Content/PremadeShaders/BaseLighting/: BaseLighting.frag  BaseLighting.vert
Example/Content/PremadeShaders/LightShader/: Light.frag  Light.vert
Example/Content/PremadeShaders/Skybox/: SkyboxBase.frag  SkyboxBase.vert
extlibs/: CMakeLists.txt  CopyLibAssimpHelper.cmake
extlibs/lib/GLFW/: CMakeLists.txt
extlibs/src/glad/: glad.c
extlibs/src/stb/: stb_image.cpp
include/FireGL/: FireGL.h  fglpch.h
include/FireGL/Core/: AssetPathManager.h  BaseLog.h  BaseSingletonManager.h  InputManager.h  SystemManager.h  TimeManager.h  Window.h
include/FireGL/Helper/: LightingMaterial.h
include/FireGL/Helper/Skybox/: SkyboxEntity.h  SkyboxMaterial.h
include/FireGL/Renderer/: BaseCamera.h  Component.h  Entity.h  Material.h  MatrixBuffer.h  Mesh.h  Model.h  Renderer.h  Scene.h  SceneObject.h  Shader.h  Texture.h  Transform.h  Vertex.h
include/FireGL/Renderer/Shapes/: Cube.h  Shape.h  Sphere.h
src/FireGL/: fglpch.cpp
src/FireGL/Core/: AssetPathManager.cpp  BaseLog.cpp  InputManager.cpp  TimeManager.cpp  Window.cpp
src/FireGL/Helper/: LightingMaterial.cpp
src/FireGL/Helper/Skybox/: SkyboxMaterial.cpp
src/FireGL/Renderer/: BaseCamera.cpp  Component.cpp  Entity.cpp  Material.cpp  MatrixBuffer.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  Scene.cpp  SceneObject.cpp  Shader.cpp  Texture.cpp  Transform.cpp
src/FireGL/Renderer/Shapes/: Cube.cpp  Shape.cpp  Sphere.cpp
